fix spacingon education school info and logo

--- a/css/main.css
+++ b/css/main.css
@@ -155,6 +155,11 @@ hr {
   height: 1px;
 }
 
+#unc-logo {
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
 /* **************************
 contact
 ************************** */
